# fuego

./: .gitignore  CMakeLists.txt  README.md
fuegomain/: FuegoMain.cpp
fuegotest/: FuegoTestMain.cpp
smartgame/: SgSystem.cpp  SgUctSearch.cpp
unittestmain/: UnitTestMain.cpp
